--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -25,7 +25,7 @@
   footer {
     align-self: stretch;
 
-    &.empty {
+    &.empty .progress {
       opacity: 0.5;
     }
   }
@@ -107,7 +107,9 @@
 
     &:disabled {
       cursor: default;
+      opacity: 0.5;
     }
+
     &:hover:not(:disabled) {
       filter: brightness(0.8)
     }
